--- a/pom.xml
+++ b/pom.xml
@@ -60,12 +60,16 @@
         <version>1.3.2</version>
       </dependency>
       <dependency>
+        <groupId>org.hibernate.validator</groupId>
+        <artifactId>hibernate-validator</artifactId>
+      </dependency>
+
+      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.13.2</version>
         <scope>test</scope>
       </dependency>
-
     </dependencies>
   </dependencyManagement>
   <build>
