--- a/core/pom.xml
+++ b/core/pom.xml
@@ -42,6 +42,12 @@
       <groupId>javax.annotation</groupId>
       <artifactId>javax.annotation-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.5.0</version>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.hibernate</groupId>
@@ -58,5 +64,11 @@
           <version>3.1.0</version>
           <scope>compile</scope>
       </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>RELEASE</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
