--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,10 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>
 
+  <error-page>
+    <exception-type>org.springframework.dao.InvalidDataAccessApiUsageException</exception-type>
+    <location>/WEB-INF/pages/errorPages/badSQLParameterPage.jsp</location>
+  </error-page>
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
