--- a/core/pom.xml
+++ b/core/pom.xml
@@ -70,5 +70,9 @@
       <version>RELEASE</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-jdbc</artifactId>
+      </dependency>
   </dependencies>
 </project>
